--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [Paths]
-input_dir = C:\RPA\Input
-temp_dir = C:\RPA\Temp
-output_dir = C:\RPA\Output
-image_main_dir = C:\RPA\Image\Main
-image_target_dir = C:\RPA\Image\Target
-log_file = shoprpa_log.txt
+input_dir = C:\\RPA\\Input
+temp_dir = C:\\RPA\\Temp
+output_dir = C:\\RPA\\Output
+image_main_dir = C:\\RPA\\Image\\Main
+image_target_dir = C:\\RPA\\Image\\Target
+log_file = C:\\RPA\\logs\\shoprpa.log
 cached_features_dir = C:\RPA\Temp\image_features
 
 [Logging]
@@ -15,8 +15,8 @@ log_file_rotation = 5
 log_file_max_mb = 50
 
 [API_Keys]
-naver_client_id=rMvGcaWRPL_ASs7x8YT1
-naver_client_secret=cdNOiv7q5t
+naver_client_id = 
+naver_client_secret = 
 
 [Matching]
 text_threshold = 0.7
@@ -116,24 +116,22 @@ max_keepalive_connections = 20
 [ScraperSettings]
 crawl_timeout = 120
 user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36
-naver_scrape_limit = 50
-naver_api_delay = 1.5
-naver_max_concurrent_api = 2
 kogift_scrape_limit = 100
+naver_scrape_limit = 50
 kogift_urls = https://koreagift.com/ez/index.php,https://adpanchok.co.kr/ez/index.php
 kogift_min_results_threshold = 5
 kogift_max_items = 200
 kogift_max_pages = 10
 haereum_main_url = https://www.jclgift.com/
 haereum_image_base_url = http://i.jclgift.com/
-haereum_selectors_json = {"search_input": "input[name='keyword']", "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]", "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]", "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a", "product_image_list": "td[align=\"center\"] > a > img", "product_list_wrapper": "form[name=\"ListForm\"]"}
+haereum_selectors_json = {"search_input": "input#keyword, input[name=\"search_word\"]", "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]", "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]", "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a", "product_image_list": "td[align=\"center\"] > a > img", "product_list_wrapper": "form[name=\"ListForm\"]"}
 
 [Playwright]
-playwright_headless = False
+playwright_headless = True
 playwright_task_concurrency = 4
-playwright_default_timeout_ms = 120000
-playwright_navigation_timeout_ms = 120000
-playwright_action_timeout_ms = 30000
+playwright_default_timeout_ms = 60000
+playwright_navigation_timeout_ms = 60000
+playwright_action_timeout_ms = 10000
 playwright_block_resources = True
 
 [Performance]
