--- a/config.ini
+++ b/config.ini
@@ -15,8 +15,8 @@ log_file_rotation = 5
 log_file_max_mb = 50
 
 [API_Keys]
-naver_client_id = 
-naver_client_secret = 
+naver_client_id = rMvGcaWRPL_ASs7x8YT1
+naver_client_secret = cdNOiv7q5t
 
 [Matching]
 text_threshold = 0.7
