--- a/config.ini
+++ b/config.ini
@@ -127,7 +127,7 @@ haereum_image_base_url = http://i.jclgift.com/
 haereum_selectors_json = {"search_input": "input#keyword, input[name=\"search_word\"]", "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]", "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]", "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a", "product_image_list": "td[align=\"center\"] > a > img", "product_list_wrapper": "form[name=\"ListForm\"]"}
 
 [Playwright]
-playwright_headless = True
+playwright_headless = False
 playwright_task_concurrency = 4
 playwright_default_timeout_ms = 60000
 playwright_navigation_timeout_ms = 60000
@@ -138,3 +138,8 @@ playwright_block_resources = True
 profile_code = False
 memory_monitoring_interval_sec = 60
 optimize_for = balanced
+
+[Debug]
+enabled = true
+log_level = DEBUG
+show_traceback = true
