--- a/config.ini
+++ b/config.ini
@@ -59,6 +59,11 @@ use_enhanced_matcher = True
 use_gpu = False
 download_images = True
 images_dir = C:\RPA\Image\Target
+# 텍스트 매칭 추가 옵션
+use_tfidf = true
+use_ensemble_models = true
+fuzzy_match_threshold = 0.8
+token_match_weight = 0.3
 
 [ImageMatching]
 # Enhanced image matching parameters
@@ -66,13 +71,24 @@ feature_match_threshold = 10
 sift_ratio_threshold = 0.75 
 akaze_distance_threshold = 50
 combined_threshold = 0.65
-# Weights for different matching techniques
-sift_weight = 0.3
-akaze_weight = 0.2
-deep_weight = 0.5
+# Weights for different matching techniques (sum = 1.0)
+sift_weight = 0.25
+akaze_weight = 0.20
+deep_weight = 0.40
+orb_weight = 0.15
+# Feature extraction parameters
+sift_features = 2000
+akaze_features = 2000
+orb_features = 2000
+# Geometric verification
+min_match_count = 10
+inlier_threshold = 5.0
+# Image enhancement
+apply_clahe = true
 # Additional options
-use_background_removal_before_matching = False
-cache_extracted_features = True
+use_multiple_models = true
+use_background_removal_before_matching = false
+cache_extracted_features = true
 max_feature_cache_items = 1000
 feature_cache_dir = C:\RPA\Temp\feature_cache
 
@@ -112,10 +128,12 @@ retry_status_codes_requests = 429, 500, 502, 503, 504
 retry_status_codes_httpx = 429, 500, 502, 503, 504
 max_connections = 100
 max_keepalive_connections = 20
+verify_ssl = True
+allow_redirects = True
+user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36
 
 [ScraperSettings]
 crawl_timeout = 120
-user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36
 kogift_scrape_limit = 100
 naver_scrape_limit = 50
 kogift_urls = https://koreagift.com/ez/index.php,https://adpanchok.co.kr/ez/index.php
@@ -125,6 +143,35 @@ kogift_max_pages = 10
 haereum_main_url = https://www.jclgift.com/
 haereum_image_base_url = http://i.jclgift.com/
 haereum_selectors_json = {"search_input": "input#keyword, input[name=\"search_word\"]", "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]", "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]", "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a", "product_image_list": "td[align=\"center\"] > a > img", "product_list_wrapper": "form[name=\"ListForm\"]"}
+
+[Crawling]
+enabled = true
+max_retries = 3
+retry_delay = 5
+timeout = 30
+max_concurrent_requests = 4
+use_proxy = false
+proxy_list = 
+user_agents = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36,Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/537.36
+respect_robots_txt = true
+cache_responses = true
+cache_expiry_hours = 24
+min_delay_between_requests = 1
+max_delay_between_requests = 3
+follow_redirects = true
+verify_ssl = true
+use_session = true
+session_timeout = 300
+max_redirects = 5
+retry_on_connection_error = true
+retry_on_timeout = true
+retry_on_http_error = true
+http_error_codes = 500, 502, 503, 504, 429
+use_random_user_agent = true
+use_random_delay = true
+save_cookies = true
+load_cookies = true
+cookies_file = C:\RPA\Temp\cookies.json
 
 [Playwright]
 playwright_headless = False
