--- a/config.ini
+++ b/config.ini
@@ -1,192 +1,162 @@
 [Paths]
 input_dir = C:\\RPA\\Input
-temp_dir = C:\\RPA\\Temp
 output_dir = C:\\RPA\\Output
 image_main_dir = C:\\RPA\\Image\\Main
 image_target_dir = C:\\RPA\\Image\\Target
 log_file = C:\\RPA\\logs\\shoprpa.log
+temp_dir = C:\\RPA\\Temp
 cached_features_dir = C:\RPA\Temp\image_features
 
 [Logging]
 log_level = INFO
-performance_logging = True
-log_memory_usage = True
-log_file_rotation = 5
-log_file_max_mb = 50
+log_file_rotation = 10
+log_file_max_mb = 100
+performance_logging = true
+log_memory_usage = true
 
 [API_Keys]
 naver_client_id = rMvGcaWRPL_ASs7x8YT1
 naver_client_secret = cdNOiv7q5t
 
 [Matching]
-text_threshold = 0.4
-image_threshold = 0.4
-text_weight = 0.6
-image_weight = 0.4
+# 기본 임계값
+text_threshold = 0.45
+image_threshold = 0.42
+combined_threshold = 0.48
+minimum_combined_score = 0.40
+
+# 가중치 설정
+text_weight = 0.65
+image_weight = 0.35
+price_similarity_weight = 0.15
+exact_match_bonus = 0.25
+
+# 텍스트 매칭 설정
 text_model_name = jhgan/ko-sroberta-multitask
-image_model_name = EfficientNetB0
-use_background_removal = True
-process_type = A
-max_cache_size = 1000
-use_category_thresholds = True
-use_persistent_cache = True
-cache_expiry_days = 30
-predownload_kogift_images = True
-kogift_special_domain_handling = True
-verify_image_urls = True
-verify_sample_percent = 10
-max_retries_downloads = 3
-retry_on_model_load_failure = True
-max_model_load_retries = 3
-fallback_to_text_only = True
-image_resize_dimension = 224
-image_preprocessing_quality = 90
-skip_image_if_size_exceeds_mb = 10
-image_similarity_timeout_sec = 5
-memory_limit_mb = 4096
-batch_size = 50
-dynamic_worker_scaling = True
-gpu_memory_fraction = 0.7
-minimum_combined_score = 0.35
-boost_exact_word_match = True
-name_split_matching = True
-price_similarity_weight = 0.1
-exact_match_bonus = 0.2
-save_similarity_maps = True
-save_processed_images = False
-generate_matching_report = True
-use_enhanced_matcher = True
-use_gpu = False
-download_images = True
-images_dir = C:\RPA\Image\Target
-# 텍스트 매칭 추가 옵션
 use_tfidf = true
 use_ensemble_models = true
-fuzzy_match_threshold = 0.8
-token_match_weight = 0.3
+fuzzy_match_threshold = 0.85
+token_match_weight = 0.35
+boost_exact_word_match = true
+name_split_matching = true
+
+# 이미지 매칭 설정
+image_model_name = EfficientNetB0
+image_resize_dimension = 256
+image_preprocessing_quality = 95
+use_gpu = true
+gpu_memory_fraction = 0.8
+batch_size = 32
+skip_image_if_size_exceeds_mb = 15
+image_similarity_timeout_sec = 10
+
+# 캐시 설정
+max_cache_size = 2000
+use_persistent_cache = true
+cache_expiry_days = 7
+
+# 카테고리별 임계값
+use_category_thresholds = true
 
 [ImageMatching]
-# Enhanced image matching parameters
-feature_match_threshold = 10
-sift_ratio_threshold = 0.75 
-akaze_distance_threshold = 50
-combined_threshold = 0.45
-# Weights for different matching techniques (sum = 1.0)
-sift_weight = 0.25
-akaze_weight = 0.20
-deep_weight = 0.40
-orb_weight = 0.15
-# Feature extraction parameters
-sift_features = 2000
-akaze_features = 2000
-orb_features = 2000
-# Geometric verification
-min_match_count = 10
-inlier_threshold = 5.0
-# Image enhancement
+# 특징 매칭 파라미터
+feature_match_threshold = 15
+sift_ratio_threshold = 0.8
+akaze_distance_threshold = 60
+min_match_count = 15
+inlier_threshold = 6.0
+
+# 특징 추출 파라미터
+sift_features = 3000
+akaze_features = 3000
+orb_features = 3000
+
+# 가중치 설정
+sift_weight = 0.30
+akaze_weight = 0.25
+deep_weight = 0.35
+orb_weight = 0.10
+
+# 이미지 처리
 apply_clahe = true
-# Additional options
 use_multiple_models = true
-use_background_removal_before_matching = false
-cache_extracted_features = true
-max_feature_cache_items = 1000
-feature_cache_dir = C:\RPA\Temp\feature_cache
+use_background_removal_before_matching = true
 
 [CategoryThresholds]
-사무용품 = 0.55, 0.45
-생활용품 = 0.48, 0.45
-건강식품 = 0.52, 0.40
-식품 = 0.45, 0.40
-전자기기 = 0.60, 0.50
-주방용품 = 0.50, 0.40
-인테리어 = 0.53, 0.45
-의류 = 0.55, 0.50
-화장품 = 0.58, 0.48
-스포츠용품 = 0.52, 0.45
+사무용품 = 0.50, 0.45
+생활용품 = 0.45, 0.42
+건강식품 = 0.48, 0.40
+식품 = 0.42, 0.38
+전자기기 = 0.55, 0.48
+주방용품 = 0.45, 0.40
+인테리어 = 0.48, 0.42
+의류 = 0.50, 0.45
+화장품 = 0.52, 0.45
+스포츠용품 = 0.48, 0.42
 
 [MatchQualityThresholds]
-high_quality = 0.75
-medium_quality = 0.60
-low_quality = 0.40
-reject_threshold = 0.30
+high_quality = 0.80
+medium_quality = 0.65
+low_quality = 0.45
+reject_threshold = 0.35
 
 [Concurrency]
-max_crawl_workers = 4
-max_match_workers = 4
-min_match_workers = 1
-thread_pool_timeout_sec = 300
-worker_restart_interval = 1000
-task_chunk_size = 20
+max_crawl_workers = 6
+max_match_workers = 8
+min_match_workers = 2
+thread_pool_timeout_sec = 600
+worker_restart_interval = 500
+task_chunk_size = 25
 
 [Network]
-request_timeout = 15
-connect_timeout = 5
-read_timeout = 15
-max_retries = 5
-backoff_factor = 0.3
-retry_status_codes_requests = 429, 500, 502, 503, 504
-retry_status_codes_httpx = 429, 500, 502, 503, 504
-max_connections = 100
-max_keepalive_connections = 20
-verify_ssl = True
-allow_redirects = True
-user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36
+request_timeout = 20
+connect_timeout = 10
+read_timeout = 20
+max_retries = 3
+backoff_factor = 0.5
+retry_status_codes = 429, 500, 502, 503, 504
+max_connections = 150
+max_keepalive_connections = 30
+verify_ssl = true
+allow_redirects = true
+user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
 
 [ScraperSettings]
-crawl_timeout = 120
-kogift_scrape_limit = 100
-naver_scrape_limit = 50
+# 기본 설정
+crawl_timeout = 180
+default_timeout = 45000
+navigation_timeout = 90000
+action_timeout = 15000
+
+# Kogift 설정
+kogift_scrape_limit = 150
 kogift_urls = https://koreagift.com/ez/index.php,https://adpanchok.co.kr/ez/index.php
-kogift_min_results_threshold = 5
-kogift_max_items = 200
-kogift_max_pages = 10
+kogift_min_results_threshold = 8
+kogift_max_items = 300
+kogift_max_pages = 15
+
+# Haereum 설정
 haereum_main_url = https://www.jclgift.com/
 haereum_image_base_url = http://i.jclgift.com/
 haereum_selectors_json = {"search_input": "input#keyword, input[name=\"search_word\"]", "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]", "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]", "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a", "product_image_list": "td[align=\"center\"] > a > img", "product_list_wrapper": "form[name=\"ListForm\"]"}
 
-[Crawling]
-enabled = true
-max_retries = 3
-retry_delay = 5
-timeout = 30
-max_concurrent_requests = 4
-use_proxy = false
-proxy_list = 
-user_agents = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36,Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/537.36
-respect_robots_txt = true
-cache_responses = true
-cache_expiry_hours = 24
-min_delay_between_requests = 1
-max_delay_between_requests = 3
-follow_redirects = true
-verify_ssl = true
-use_session = true
-session_timeout = 300
-max_redirects = 5
-retry_on_connection_error = true
-retry_on_timeout = true
-retry_on_http_error = true
-http_error_codes = 500, 502, 503, 504, 429
-use_random_user_agent = true
-use_random_delay = true
-save_cookies = true
-load_cookies = true
-cookies_file = C:\RPA\Temp\cookies.json
+# Naver 설정
+naver_scrape_limit = 100
 
 [Playwright]
-playwright_headless = False
-playwright_task_concurrency = 4
-playwright_default_timeout_ms = 60000
-playwright_navigation_timeout_ms = 60000
-playwright_action_timeout_ms = 10000
-playwright_block_resources = True
+playwright_headless = true
+playwright_task_concurrency = 6
+playwright_default_timeout_ms = 90000
+playwright_navigation_timeout_ms = 90000
+playwright_action_timeout_ms = 15000
+playwright_block_resources = true
 
 [Performance]
-profile_code = False
-memory_monitoring_interval_sec = 60
-optimize_for = balanced
+profile_code = false
+memory_monitoring_interval_sec = 30
+optimize_for = speed
 
 [Debug]
-enabled = true
-log_level = DEBUG
-show_traceback = true
+enabled = false
+log_level = INFO
+show_traceback = false
