--- a/config.ini
+++ b/config.ini
@@ -150,6 +150,7 @@ playwright_default_timeout_ms = 90000
 playwright_navigation_timeout_ms = 90000
 playwright_action_timeout_ms = 15000
 playwright_block_resources = true
+playwright_max_concurrent_windows = 3
 
 [Performance]
 profile_code = false
