--- a/config.ini
+++ b/config.ini
@@ -151,6 +151,8 @@ playwright_navigation_timeout_ms = 90000
 playwright_action_timeout_ms = 15000
 playwright_block_resources = true
 playwright_max_concurrent_windows = 3
+playwright_max_browser_contexts = 3
+playwright_max_pages_per_context = 1
 
 [Performance]
 profile_code = false
