Update configuration settings and enhance image downloading functionality. Disabled TF-IDF usage, adjusted GPU settings, and refined network timeout parameters. Added async image downloading capabilities and improved error handling in image processing functions. Enhanced data validation and logging for image paths in the matching logic.

--- a/config.ini
+++ b/config.ini
@@ -33,7 +33,7 @@ exact_match_bonus = 0.25
 
 # 텍스트 매칭 설정
 text_model_name = jhgan/ko-sroberta-multitask
-use_tfidf = true
+use_tfidf = false
 use_ensemble_models = true
 fuzzy_match_threshold = 0.85
 token_match_weight = 0.35
@@ -44,11 +44,11 @@ name_split_matching = true
 image_model_name = EfficientNetB0
 image_resize_dimension = 256
 image_preprocessing_quality = 95
-use_gpu = true
+use_gpu = false
 gpu_memory_fraction = 0.8
-batch_size = 32
-skip_image_if_size_exceeds_mb = 15
-image_similarity_timeout_sec = 10
+batch_size = 16
+skip_image_if_size_exceeds_mb = 10
+image_similarity_timeout_sec = 20
 
 # 캐시 설정
 max_cache_size = 2000
@@ -109,14 +109,14 @@ worker_restart_interval = 500
 task_chunk_size = 25
 
 [Network]
-request_timeout = 20
-connect_timeout = 10
-read_timeout = 20
-max_retries = 3
-backoff_factor = 0.5
+request_timeout = 30
+connect_timeout = 15
+read_timeout = 30
+max_retries = 5
+backoff_factor = 1.0
 retry_status_codes = 429, 500, 502, 503, 504
-max_connections = 150
-max_keepalive_connections = 30
+max_connections = 100
+max_keepalive_connections = 20
 verify_ssl = true
 allow_redirects = true
 user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
@@ -145,13 +145,13 @@ naver_scrape_limit = 100
 
 [Playwright]
 playwright_headless = false
-playwright_task_concurrency = 6
-playwright_default_timeout_ms = 90000
-playwright_navigation_timeout_ms = 90000
-playwright_action_timeout_ms = 15000
+playwright_task_concurrency = 3
+playwright_default_timeout_ms = 120000
+playwright_navigation_timeout_ms = 120000
+playwright_action_timeout_ms = 30000
 playwright_block_resources = true
-playwright_max_concurrent_windows = 3
-playwright_max_browser_contexts = 3
+playwright_max_concurrent_windows = 2
+playwright_max_browser_contexts = 2
 playwright_max_pages_per_context = 1
 
 [Performance]
