Refactor scraping logic to improve browser connection handling and timeout settings across Kogift and Haereum scripts. Enhanced error handling for browser reconnections, added retry logic for navigation and action timeouts, and streamlined configuration management for Playwright settings. Updated test_kogift_scraper to support headless mode and improved logging for better traceability during scraping operations.

--- a/config.ini
+++ b/config.ini
@@ -101,12 +101,12 @@ low_quality = 0.45
 reject_threshold = 0.35
 
 [Concurrency]
-max_crawl_workers = 6
-max_match_workers = 8
-min_match_workers = 2
-thread_pool_timeout_sec = 600
-worker_restart_interval = 500
-task_chunk_size = 25
+max_crawl_workers = 2
+max_match_workers = 4
+min_match_workers = 1
+thread_pool_timeout_sec = 900
+worker_restart_interval = 1000
+task_chunk_size = 15
 
 [Network]
 request_timeout = 30
@@ -123,17 +123,17 @@ user_agent = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML
 
 [ScraperSettings]
 # 기본 설정
-crawl_timeout = 180
-default_timeout = 45000
-navigation_timeout = 90000
-action_timeout = 15000
+crawl_timeout = 300
+default_timeout = 60000
+navigation_timeout = 120000
+action_timeout = 30000
 
 # Kogift 설정
-kogift_scrape_limit = 150
+kogift_scrape_limit = 80
 kogift_urls = https://koreagift.com/ez/index.php,https://adpanchok.co.kr/ez/index.php
-kogift_min_results_threshold = 8
-kogift_max_items = 300
-kogift_max_pages = 15
+kogift_min_results_threshold = 5
+kogift_max_items = 100
+kogift_max_pages = 5
 
 # Haereum 설정
 haereum_main_url = https://www.jclgift.com/
@@ -144,15 +144,17 @@ haereum_selectors_json = {"search_input": "input#keyword, input[name=\"search_wo
 naver_scrape_limit = 100
 
 [Playwright]
-playwright_headless = false
-playwright_task_concurrency = 3
-playwright_default_timeout_ms = 120000
-playwright_navigation_timeout_ms = 120000
-playwright_action_timeout_ms = 30000
+playwright_headless = true
+playwright_task_concurrency = 2
+playwright_default_timeout_ms = 180000
+playwright_navigation_timeout_ms = 180000
+playwright_action_timeout_ms = 45000
 playwright_block_resources = true
-playwright_max_concurrent_windows = 3
-playwright_max_browser_contexts = 3
+playwright_max_concurrent_windows = 2
+playwright_max_browser_contexts = 2
 playwright_max_pages_per_context = 1
+playwright_new_context_delay_ms = 2000
+playwright_browser_args = ["--disable-gpu", "--disable-dev-shm-usage", "--disable-extensions", "--no-sandbox", "--disable-setuid-sandbox", "--disable-web-security"]
 
 [Performance]
 profile_code = false
