Enhance configuration management and image processing across multiple scripts. Updated `config.ini` to include new image download settings and improved error handling in image downloading functions. Refactored `crawl_naver_image` to standardize URL handling and added retry logic for downloads. Enhanced `match_naver_product_images` to improve image path validation and logging. Updated Excel utilities to ensure robust image path handling and added recovery directory creation for missing images.

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ image_main_dir = C:\\RPA\\Image\\Main
 image_target_dir = C:\\RPA\\Image\\Target
 log_file = C:\\RPA\\logs\\shoprpa.log
 temp_dir = C:\\RPA\\Temp
-cached_features_dir = C:\RPA\Temp\image_features
+cached_features_dir = C:\\RPA\\Temp\\image_features
 
 [Logging]
 log_level = INFO
@@ -57,6 +57,14 @@ cache_expiry_days = 7
 
 # 카테고리별 임계값
 use_category_thresholds = true
+
+# 이미지 다운로드 설정
+max_retries_downloads = 3
+verify_sample_percent = 10
+verify_image_urls = true
+predownload_kogift_images = true
+download_image_timeout = 30
+max_concurrent_downloads = 5
 
 [ImageMatching]
 # 특징 매칭 파라미터
