Enhance image processing in main_rpa.py by integrating and filtering images based on similarity scores. Added a new configuration parameter for image display threshold in config.ini to control which images are shown. Improved logging for image integration process.

--- a/config.ini
+++ b/config.ini
@@ -24,6 +24,8 @@ text_threshold = 0.45
 image_threshold = 0.42
 combined_threshold = 0.48
 minimum_combined_score = 0.40
+image_display_threshold = 0.7  
+# 이미지 표시 임계값 (이 값 이상의 유사도를 가진 이미지만 표시)
 
 # 가중치 설정
 text_weight = 0.65
