--- a/config.ini
+++ b/config.ini
@@ -24,8 +24,7 @@ text_threshold = 0.45
 image_threshold = 0.42
 combined_threshold = 0.48
 minimum_combined_score = 0.40
-image_display_threshold = 0.7  
-# 이미지 표시 임계값 (이 값 이상의 유사도를 가진 이미지만 표시)
+image_display_threshold = 0.7
 
 # 가중치 설정
 text_weight = 0.65
@@ -71,8 +70,8 @@ max_concurrent_downloads = 5
 [ImageMatching]
 # 특징 매칭 파라미터
 feature_match_threshold = 15
-sift_ratio_threshold = 0.8
-akaze_distance_threshold = 60
+sift_ratio_threshold = 0.70
+akaze_distance_threshold = 40
 min_match_count = 15
 inlier_threshold = 6.0
 
@@ -82,15 +81,20 @@ akaze_features = 3000
 orb_features = 3000
 
 # 가중치 설정
-sift_weight = 0.30
-akaze_weight = 0.25
-deep_weight = 0.35
-orb_weight = 0.10
+sift_weight = 0.25
+akaze_weight = 0.20
+deep_weight = 0.40
+orb_weight = 0.15
 
 # 이미지 처리
 apply_clahe = true
 use_multiple_models = true
 use_background_removal_before_matching = true
+
+# 신뢰도 임계값 (0에서 1 사이)
+# 높을수록 더 엄격한 매칭 (품질은 좋지만 매칭 수 감소)
+# 낮을수록 더 관대한 매칭 (매칭 수는 많지만 품질 감소)
+minimum_match_confidence = 0.45
 
 [CategoryThresholds]
 사무용품 = 0.50, 0.45
