--- a/config.ini
+++ b/config.ini
@@ -158,7 +158,7 @@ haereum_selectors_json = {"search_input": "input#keyword, input[name=\"search_wo
 naver_scrape_limit = 100
 
 [Playwright]
-playwright_headless = true
+playwright_headless = false
 playwright_task_concurrency = 2
 playwright_default_timeout_ms = 180000
 playwright_navigation_timeout_ms = 180000
