--- a/config.ini
+++ b/config.ini
@@ -20,15 +20,19 @@ naver_client_secret = cdNOiv7q5t
 
 [Matching]
 # 기본 임계값
-text_threshold = 0.20
-image_threshold = 0.30
-combined_threshold = 0.25
-minimum_combined_score = 0.20
-image_display_threshold = 0.05
+text_threshold = 0.40
+image_threshold = 0.40
+combined_threshold = 0.45
+minimum_combined_score = 0.35
+image_display_threshold = 0.10
+
+# Naver API 특별 설정
+naver_initial_similarity_threshold = 0.65
+naver_minimum_similarity = 0.45
 
 # 가중치 설정
-text_weight = 0.65
-image_weight = 0.35
+text_weight = 0.70
+image_weight = 0.30
 price_similarity_weight = 0.15
 exact_match_bonus = 0.25
 
@@ -69,11 +73,11 @@ max_concurrent_downloads = 5
 
 [ImageMatching]
 # 특징 매칭 파라미터
-feature_match_threshold = 5
-sift_ratio_threshold = 0.80
-akaze_distance_threshold = 50
-min_match_count = 10
-inlier_threshold = 5.0
+feature_match_threshold = 8
+sift_ratio_threshold = 0.75
+akaze_distance_threshold = 45
+min_match_count = 12
+inlier_threshold = 4.5
 
 # 특징 추출 파라미터
 sift_features = 3000
@@ -92,25 +96,25 @@ use_multiple_models = true
 use_background_removal_before_matching = true
 
 # 신뢰도 임계값 (0에서 1 사이)
-minimum_match_confidence = 0.20
+minimum_match_confidence = 0.35
 
 [CategoryThresholds]
-사무용품 = 0.30, 0.25
-생활용품 = 0.25, 0.22
-건강식품 = 0.28, 0.20
-식품 = 0.22, 0.18
-전자기기 = 0.35, 0.28
-주방용품 = 0.25, 0.20
-인테리어 = 0.28, 0.22
-의류 = 0.30, 0.25
-화장품 = 0.32, 0.25
-스포츠용품 = 0.28, 0.22
+사무용품 = 0.35, 0.30
+생활용품 = 0.30, 0.28
+건강식품 = 0.35, 0.25
+식품 = 0.30, 0.25
+전자기기 = 0.40, 0.35
+주방용품 = 0.30, 0.28
+인테리어 = 0.35, 0.30
+의류 = 0.40, 0.35
+화장품 = 0.40, 0.35
+스포츠용품 = 0.35, 0.30
 
 [MatchQualityThresholds]
-high_quality = 0.60
-medium_quality = 0.40
-low_quality = 0.25
-reject_threshold = 0.15
+high_quality = 0.70
+medium_quality = 0.50
+low_quality = 0.35
+reject_threshold = 0.30
 
 [Concurrency]
 max_crawl_workers = 2
@@ -153,7 +157,9 @@ haereum_image_base_url = http://i.jclgift.com/
 haereum_selectors_json = {"search_input": "input#keyword, input[name=\"search_word\"]", "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]", "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]", "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a", "product_image_list": "td[align=\"center\"] > a > img", "product_list_wrapper": "form[name=\"ListForm\"]"}
 
 # Naver 설정
-naver_scrape_limit = 100
+naver_scrape_limit = 80
+naver_api_delay = 1.5
+naver_max_concurrent_api = 2
 
 [Playwright]
 playwright_headless = true
