Enhance email functionality and Excel output processing
- Added email configuration section in config.ini to enable email sending with customizable settings.
- Implemented email validation in execution_setup.py to ensure proper configuration before sending.
- Integrated email sending logic in main_rpa.py to dispatch Excel files upon successful processing.
- Updated excel_utils.py with new formatting functions for improved upload file presentation.
- Adjusted column widths and header formatting in Excel outputs for better readability.

--- a/config.ini
+++ b/config.ini
@@ -183,3 +183,23 @@ optimize_for = speed
 enabled = false
 log_level = INFO
 show_traceback = false
+
+[Email]
+# 이메일 기능 설정
+enabled = true
+send_email_without_attachments = false
+
+# SMTP 서버 설정 (Gmail)
+smtp_server = smtp.gmail.com
+smtp_port = 587
+smtp_username = azicteam@gmail.com
+smtp_password = tpsn wfba uojm lhce
+use_tls = true
+
+# 발신자 및 수신자 설정
+sender_email = azicteam@gmail.com
+recipient_emails = jamesen1004@gmail.com
+
+# 이메일 내용 설정
+email_subject_prefix = ShopRPA 결과
+include_log_file = false
