--- a/config.ini
+++ b/config.ini
@@ -73,11 +73,11 @@ max_concurrent_downloads = 5
 
 [ImageMatching]
 # 특징 매칭 파라미터
-feature_match_threshold = 8
-sift_ratio_threshold = 0.75
-akaze_distance_threshold = 45
+feature_match_threshold = 10
+sift_ratio_threshold = 0.72
+akaze_distance_threshold = 42
 min_match_count = 12
-inlier_threshold = 4.5
+inlier_threshold = 4.2
 
 # 특징 추출 파라미터
 sift_features = 3000
@@ -96,7 +96,7 @@ use_multiple_models = true
 use_background_removal_before_matching = true
 
 # 신뢰도 임계값 (0에서 1 사이)
-minimum_match_confidence = 0.35
+minimum_match_confidence = 0.38
 
 [CategoryThresholds]
 사무용품 = 0.35, 0.30
@@ -198,7 +198,7 @@ use_tls = true
 
 # 발신자 및 수신자 설정
 sender_email = azicteam@gmail.com
-recipient_emails = jamesen1004@gmail.com
+recipient_emails = jamesen1004@gmail.com, dasomas@naver.com
 
 # 이메일 내용 설정
 email_subject_prefix = ShopRPA 결과
