Enable GPU usage and enhance image matching configuration
- Updated config.ini to enable GPU usage for image processing.
- Refactored enhanced_image_matcher.py to load GPU settings from config.ini, allowing dynamic configuration of GPU usage.
- Improved error handling and logging for GPU status checks and image matching processes.
- Added new methods for calculating image similarity using SIFT, AKAZE, and ORB algorithms.

--- a/config.ini
+++ b/config.ini
@@ -49,7 +49,7 @@ name_split_matching = true
 image_model_name = EfficientNetB0
 image_resize_dimension = 256
 image_preprocessing_quality = 95
-use_gpu = false
+use_gpu = true
 gpu_memory_fraction = 0.8
 batch_size = 16
 skip_image_if_size_exceeds_mb = 10
