--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,31 @@
-pandas>=1.3.5
-numpy>=1.21.0
-tensorflow>=2.10.0
-PyQt5>=5.15.7
-openpyxl>=3.0.10
-playwright>=1.20.0
-sentence-transformers>=2.2.2
-rembg>=2.0.30
-Pillow>=9.0.0
-requests>=2.27.1
-beautifulsoup4>=4.10.0
-scikit-learn>=1.0.2
-urllib3>=1.26.9
-tensorflow-hub>=0.12.0
-tqdm>=4.64.0
-xlrd>=2.0.1
-onnxruntime>=1.14.0
-httpx
-psutil>=5.9.0
-pyautogui>=0.9.54
-pygetwindow>=0.0.9
-plyer>=2.1.0
-selenium>=4.10.0
-aiofiles>=23.1.0
-chardet>=5.1.0
-xlsxwriter>=3.1.2 
-aiohttp>=3.8.5
-h2
-python-Levenshtein
-secure-smtplib>=0.1.1
+pandas==1.3.5
+numpy==1.21.6
+tensorflow==2.10.0
+tensorflow-hub==0.12.0
+keras==2.10.0
+PyQt5==5.15.7
+openpyxl==3.0.10
+playwright==1.20.0
+sentence-transformers==2.2.2
+rembg==2.0.30
+Pillow==9.0.0
+requests==2.27.1
+beautifulsoup4==4.10.0
+scikit-learn==1.0.2
+urllib3==1.26.9
+tqdm==4.64.0
+xlrd==2.0.1
+onnxruntime==1.14.0
+httpx==0.24.1
+psutil==5.9.0
+pyautogui==0.9.54
+pygetwindow==0.0.9
+plyer==2.1.0
+selenium==4.10.0
+aiofiles==23.1.0
+chardet==5.1.0
+xlsxwriter==3.1.2 
+aiohttp==3.8.5
+h2==4.1.0
+python-Levenshtein==0.21.1
+secure-smtplib==0.1.1
