--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 pandas==1.3.5
-numpy==1.21.6
+numpy>=1.23.5
 tensorflow==2.10.0
 tensorflow-hub==0.12.0
-keras==2.10.0
 PyQt5==5.15.7
 openpyxl==3.0.10
 playwright==1.20.0
