--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ scikit-learn==1.0.2
 urllib3==1.26.9
 tqdm==4.64.0
 xlrd==2.0.1
-onnxruntime==1.14.0
+onnxruntime~=1.13.1
 httpx==0.24.1
 psutil==5.9.0
 pyautogui==0.9.54
