--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,45 @@
-pandas==1.3.5
+# Core dependencies
 numpy>=1.23.5
+pandas>=1.3.5
+scipy>=1.7.3
+
+# Deep Learning & ML
 tensorflow==2.10.0
 tensorflow-hub==0.12.0
-PyQt5==5.15.7
-openpyxl==3.0.10
-playwright==1.20.0
 sentence-transformers==2.2.2
+scikit-learn>=1.0.2
+
+# Image Processing
+Pillow~=9.3.0  # Updated for rembg compatibility
+opencv-python-headless~=4.6.0.66
 rembg==2.0.30
-Pillow==9.0.0
-requests==2.27.1
-beautifulsoup4==4.10.0
-scikit-learn==1.0.2
-urllib3==1.26.9
-tqdm==4.64.0
-xlrd==2.0.1
 onnxruntime~=1.13.1
-httpx==0.24.1
-psutil==5.9.0
-pyautogui==0.9.54
-pygetwindow==0.0.9
-plyer==2.1.0
-selenium==4.10.0
-aiofiles==23.1.0
-chardet==5.1.0
-xlsxwriter==3.1.2 
-aiohttp==3.8.5
-h2==4.1.0
-python-Levenshtein==0.21.1
-secure-smtplib==0.1.1
+
+# Web & Network
+requests>=2.27.1
+urllib3>=1.26.9,<2.0.0
+aiohttp>=3.8.5
+httpx>=0.24.1
+h2>=4.1.0
+beautifulsoup4>=4.10.0
+playwright>=1.20.0
+selenium>=4.10.0
+secure-smtplib>=0.1.1
+
+# GUI & System
+PyQt5>=5.15.7
+pyautogui>=0.9.54
+pygetwindow>=0.0.9
+plyer>=2.1.0
+psutil>=5.9.0
+
+# File Operations
+openpyxl>=3.0.10
+xlrd>=2.0.1
+xlsxwriter>=3.1.2
+aiofiles>=23.1.0
+chardet>=5.1.0
+python-Levenshtein>=0.21.1
+
+# Progress & Utils
+tqdm>=4.64.0
