--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas>=1.3.5
 scipy>=1.7.3
 
 # Deep Learning & ML
-tensorflow==2.10.0
+tensorflow>=2.10.0,<2.11.0  # Updated for keras.applications compatibility
 tensorflow-hub==0.12.0
 sentence-transformers==2.2.2
 scikit-learn>=1.0.2
@@ -27,7 +27,9 @@ selenium>=4.10.0
 secure-smtplib>=0.1.1
 
 # GUI & System
-PyQt5>=5.15.7
+PyQt6>=6.4.0  # Updated from PyQt5 to PyQt6
+PyQt6-Qt6>=6.4.0
+PyQt6-sip>=13.4.0
 pyautogui>=0.9.54
 pygetwindow>=0.0.9
 plyer>=2.1.0
