--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas>=1.3.5
 scipy>=1.7.3
 
 # Deep Learning & ML
-tensorflow>=2.10.0,<2.11.0  # Updated for keras.applications compatibility
+tensorflow==2.10.0  # Fixed version for stability
 tensorflow-hub==0.12.0
 sentence-transformers==2.2.2
 scikit-learn>=1.0.2
