--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ scipy>=1.7.3
 # Deep Learning & ML
 tensorflow==2.10.0  # Fixed version for stability
 tensorflow-hub==0.12.0
+huggingface-hub==0.8.1  # Added specific version for compatibility
 sentence-transformers==2.2.2
 scikit-learn>=1.0.2
 
