--- a/config.ini
+++ b/config.ini
@@ -161,6 +161,14 @@ naver_scrape_limit = 80
 naver_api_delay = 1.5
 naver_max_concurrent_api = 2
 
+# 기본 수량 설정 (Excel 수량이 없을 경우 사용)
+target_quantities = 300,500,1000,2000
+
+# 수량 관련 설정
+use_excel_quantities = true  # Excel 수량 우선 사용 여부
+min_quantity = 100          # 최소 수량
+max_quantity = 20000        # 최대 수량
+
 [Playwright]
 playwright_headless = true
 playwright_task_concurrency = 2
