--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ pandas>=1.3.5
 scipy>=1.7.3
 
 # Deep Learning & ML
-tensorflow==2.10.0  # Fixed version for stability
-tensorflow-hub==0.12.0
-huggingface-hub==0.8.1  # Added specific version for compatibility
-sentence-transformers==2.2.2
+tensorflow>=2.15.0  # Updated for CUDA 12 compatibility
+tensorflow-hub>=0.15.0  # Updated to match TensorFlow version
+huggingface-hub>=0.8.1
+sentence-transformers>=2.2.2
 scikit-learn>=1.0.2
 
 # Image Processing
