--- a/config.ini
+++ b/config.ini
@@ -206,7 +206,7 @@ use_tls = true
 
 # 발신자 및 수신자 설정
 sender_email = azicteam@gmail.com
-recipient_emails = jamesen1004@gmail.com, dasomas@naver.com
+recipient_emails = jamesen1004@gmail.com, dasomas@hanmail.net, myungja27@naver.com, tbsk67@naver.com
 
 # 이메일 내용 설정
 email_subject_prefix = ShopRPA 결과
