--- a/config.ini
+++ b/config.ini
@@ -153,8 +153,19 @@ kogift_max_pages = 5
 
 # Haereum 설정
 haereum_main_url = https://www.jclgift.com/
-haereum_image_base_url = http://i.jclgift.com/
-haereum_selectors_json = {"search_input": "input#keyword, input[name=\"search_word\"]", "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]", "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]", "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a", "product_image_list": "td[align=\"center\"] > a > img", "product_list_wrapper": "form[name=\"ListForm\"]"}
+haereum_image_base_url = https://i.jclgift.com/
+haereum_selectors_json = {
+    "search_input": "input#keyword, input[name=\"search_word\"]",
+    "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]",
+    "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]",
+    "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a",
+    "product_image_list": "td[align=\"center\"] > a > img[src*=\"jclgift.com\"]",
+    "product_list_wrapper": "form[name=\"ListForm\"]",
+    "image_selector": "img[src*=\"jclgift.com\"]"
+}
+haereum_image_pattern = "https?://[^/]+/[^\"']+\\.(jpg|jpeg|png|gif)"
+haereum_max_retries = 3
+haereum_retry_delay = 2
 
 # Naver 설정
 naver_scrape_limit = 80
