--- a/config.ini
+++ b/config.ini
@@ -154,16 +154,14 @@ kogift_max_pages = 5
 # Haereum 설정
 haereum_main_url = https://www.jclgift.com/
 haereum_image_base_url = https://i.jclgift.com/
-haereum_selectors_json = {
-    "search_input": "input#keyword, input[name=\"search_word\"]",
-    "search_button": "input[type=\"image\"][src*=\"b_search.gif\"]",
-    "product_list_item": "td[width=\"160\"][bgcolor=\"ffffff\"]",
-    "product_name_list": "td[align=\"center\"][style*=\"line-height:130%\"] > a",
-    "product_image_list": "td[align=\"center\"] > a > img[src*=\"jclgift.com\"]",
-    "product_list_wrapper": "form[name=\"ListForm\"]",
-    "image_selector": "img[src*=\"jclgift.com\"]"
-}
-haereum_image_pattern = "https?://[^/]+/[^\"']+\\.(jpg|jpeg|png|gif)"
+haereum_selector_search_input = input#keyword, input[name="search_word"]
+haereum_selector_search_button = input[type="image"][src*="b_search.gif"]
+haereum_selector_product_list_item = td[width="160"][bgcolor="ffffff"]
+haereum_selector_product_name_list = td[align="center"][style*="line-height:130%"] > a
+haereum_selector_product_image_list = td[align="center"] > a > img[src*="jclgift.com"]
+haereum_selector_product_list_wrapper = form[name="ListForm"]
+haereum_selector_image = img[src*="jclgift.com"]
+haereum_image_pattern = https?://[^/]+/[^"']+\.(jpg|jpeg|png|gif)
 haereum_max_retries = 3
 haereum_retry_delay = 2
 
