--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ input_dir = C:\\RPA\\Input
 output_dir = C:\\RPA\\Output
 image_main_dir = C:\\RPA\\Image\\Main
 image_target_dir = C:\\RPA\\Image\\Target
-log_file = C:\\RPA\\logs\\shoprpa.log
+log_file = C:\\Users\\james\\Desktop\\Shoprpa2\\logs\\shoprpa.log
 temp_dir = C:\\RPA\\Temp
 cached_features_dir = C:\\RPA\\Temp\\image_features
 
@@ -174,9 +174,9 @@ naver_max_concurrent_api = 2
 target_quantities = 300,500,1000,2000
 
 # 수량 관련 설정
-use_excel_quantities = true  # Excel 수량 우선 사용 여부
-min_quantity = 100          # 최소 수량
-max_quantity = 20000        # 최대 수량
+use_excel_quantities = true
+min_quantity = 100
+max_quantity = 20000
 
 [Playwright]
 playwright_headless = true
