--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ input_dir = C:\\RPA\\Input
 output_dir = C:\\RPA\\Output
 image_main_dir = C:\\RPA\\Image\\Main
 image_target_dir = C:\\RPA\\Image\\Target
-log_file = C:\\Users\\james\\Desktop\\Shoprpa2\\logs\\shoprpa.log
+log_file = C:\\RPA\\logs\\shoprpa.log
 temp_dir = C:\\RPA\\Temp
 cached_features_dir = C:\\RPA\\Temp\\image_features
 
