upload_filter was too strict

--- a/config.ini
+++ b/config.ini
@@ -200,6 +200,7 @@ optimize_for = speed
 enabled = false
 log_level = INFO
 show_traceback = false
+upload_filter_strictness = low
 
 [Email]
 # 이메일 기능 설정
