--- a/config.ini
+++ b/config.ini
@@ -27,8 +27,11 @@ minimum_combined_score = 0.001
 image_display_threshold = 0.001
 
 # Naver API 특별 설정
-naver_initial_similarity_threshold = 0.35
+naver_initial_similarity_threshold = 0.20
 naver_minimum_similarity = 0.001
+
+# Kogift 텍스트 매칭 설정 (신규 추가)
+kogift_initial_similarity_threshold = 0.30
 
 # 가중치 설정
 text_weight = 0.70
