--- a/config.ini
+++ b/config.ini
@@ -21,17 +21,17 @@ naver_client_secret = cdNOiv7q5t
 [Matching]
 # 기본 임계값
 text_threshold = 0.20
-image_threshold = 0.001
-combined_threshold = 0.001
-minimum_combined_score = 0.001
-image_display_threshold = 0.001
+image_threshold = 0.05
+combined_threshold = 0.05
+minimum_combined_score = 0.03
+image_display_threshold = 0.05
 
 # Naver API 특별 설정
-naver_initial_similarity_threshold = 0.20
-naver_minimum_similarity = 0.001
+naver_initial_similarity_threshold = 0.10
+naver_minimum_similarity = 0.05
 
-# Kogift 텍스트 매칭 설정 (신규 추가)
-kogift_initial_similarity_threshold = 0.30
+# Kogift 텍스트 매칭 설정
+kogift_initial_similarity_threshold = 0.10
 
 # 가중치 설정
 text_weight = 0.70
@@ -77,10 +77,10 @@ max_concurrent_downloads = 5
 [ImageMatching]
 # 특징 매칭 파라미터
 feature_match_threshold = 10
-sift_ratio_threshold = 0.85
-akaze_distance_threshold = 60
-min_match_count = 6
-inlier_threshold = 4.0
+sift_ratio_threshold = 0.80
+akaze_distance_threshold = 45
+min_match_count = 8
+inlier_threshold = 3.5
 
 # 특징 추출 파라미터
 sift_features = 3500
@@ -88,9 +88,9 @@ akaze_features = 3500
 orb_features = 3500
 
 # 가중치 설정
-sift_weight = 0.30
-akaze_weight = 0.25
-deep_weight = 0.35
+sift_weight = 0.40
+akaze_weight = 0.30
+deep_weight = 0.20
 orb_weight = 0.10
 
 # 이미지 처리
@@ -99,7 +99,7 @@ use_multiple_models = true
 use_background_removal_before_matching = true
 
 # 신뢰도 임계값 (0에서 1 사이)
-minimum_match_confidence = 0.001
+minimum_match_confidence = 0.05
 
 [CategoryThresholds]
 사무용품 = 0.35, 0.30
