naver, kogift image problem

--- a/config.ini
+++ b/config.ini
@@ -104,12 +104,12 @@ minimum_match_confidence = 0.05
 [ImageFiltering]
 # 이미지 필터링 설정
 # 네이버 이미지 관련 설정
-naver_similarity_threshold = 0.5  # 네이버 이미지 필터링 유사도 임계값 (낮을수록 많은 이미지가 유지됨)
-skip_naver_validation = true     # 네이버 이미지 URL 검증 건너뛰기 (true=검증 안함, 모든 이미지 유지)
-lenient_naver_validation = true  # 네이버 이미지 검증 관대하게 처리 (true=더 관대한 검증)
+naver_similarity_threshold = 0.1
+skip_naver_validation = true
+lenient_naver_validation = true
 
 # 고려기프트 이미지 관련 설정
-kogift_similarity_threshold = 0.6  # 고려기프트 이미지 필터링 유사도 임계값
+kogift_similarity_threshold = 0.6
 
 [CategoryThresholds]
 사무용품 = 0.35, 0.30
