kogift fix, image more strict

--- a/config.ini
+++ b/config.ini
@@ -20,14 +20,14 @@ naver_client_secret = cdNOiv7q5t
 
 [Matching]
 # 기본 임계값
-text_threshold = 0.20
-image_threshold = 0.3
-combined_threshold = 0.06
-minimum_combined_score = 0.03
-image_display_threshold = 0.3
+text_threshold = 0.35
+image_threshold = 0.45
+combined_threshold = 0.15
+minimum_combined_score = 0.10
+image_display_threshold = 0.45
 # Naver API 특별 설정
-naver_initial_similarity_threshold = 0.10
-naver_minimum_similarity = 0.05
+naver_initial_similarity_threshold = 0.20
+naver_minimum_similarity = 0.15
 
 # Kogift 텍스트 매칭 설정
 kogift_initial_similarity_threshold = 0.10
@@ -42,7 +42,7 @@ exact_match_bonus = 0.25
 text_model_name = jhgan/ko-sroberta-multitask
 use_tfidf = false
 use_ensemble_models = true
-fuzzy_match_threshold = 0.60
+fuzzy_match_threshold = 0.70
 token_match_weight = 0.35
 boost_exact_word_match = true
 name_split_matching = true
@@ -75,11 +75,11 @@ max_concurrent_downloads = 5
 
 [ImageMatching]
 # 특징 매칭 파라미터
-feature_match_threshold = 10
+feature_match_threshold = 25
 sift_ratio_threshold = 0.80
-akaze_distance_threshold = 45
-min_match_count = 8
-inlier_threshold = 3.5
+akaze_distance_threshold = 35
+min_match_count = 10
+inlier_threshold = 3.0
 
 # 특징 추출 파라미터
 sift_features = 3500
@@ -98,35 +98,35 @@ use_multiple_models = true
 use_background_removal_before_matching = true
 
 # 신뢰도 임계값 (0에서 1 사이)
-minimum_match_confidence = 0.30
+minimum_match_confidence = 0.45
 
 [ImageFiltering]
 # 이미지 필터링 설정
 # 네이버 이미지 관련 설정
-naver_similarity_threshold = 0.6
-skip_naver_validation = true
+naver_similarity_threshold = 0.75
+skip_naver_validation = false
 lenient_naver_validation = false
 
 # 고려기프트 이미지 관련 설정
-kogift_similarity_threshold = 0.65
+kogift_similarity_threshold = 0.70
 
 [CategoryThresholds]
-사무용품 = 0.35, 0.30
-생활용품 = 0.30, 0.28
-건강식품 = 0.35, 0.25
-식품 = 0.30, 0.25
-전자기기 = 0.40, 0.35
-주방용품 = 0.30, 0.28
-인테리어 = 0.35, 0.30
-의류 = 0.40, 0.35
-화장품 = 0.40, 0.35
-스포츠용품 = 0.35, 0.30
+사무용품 = 0.45, 0.40
+생활용품 = 0.40, 0.38
+건강식품 = 0.45, 0.35
+식품 = 0.40, 0.35
+전자기기 = 0.50, 0.45
+주방용품 = 0.40, 0.38
+인테리어 = 0.45, 0.40
+의류 = 0.50, 0.45
+화장품 = 0.50, 0.45
+스포츠용품 = 0.45, 0.40
 
 [MatchQualityThresholds]
-high_quality = 0.40
-medium_quality = 0.20
-low_quality = 0.10
-reject_threshold = 0.10
+high_quality = 0.50
+medium_quality = 0.35
+low_quality = 0.20
+reject_threshold = 0.20
 
 [Concurrency]
 max_crawl_workers = 2
