--- a/config.ini
+++ b/config.ini
@@ -13,18 +13,28 @@ log_file_rotation = 10
 log_file_max_mb = 100
 performance_logging = true
 log_memory_usage = true
+# 새로운 로깅 개선사항
+enable_debug_mode = false
+log_hash_generation = false
+log_image_matching_details = true
+log_performance_metrics = true
 
 [API_Keys]
 naver_client_id = rMvGcaWRPL_ASs7x8YT1
 naver_client_secret = cdNOiv7q5t
 
 [Matching]
-# 기본 임계값
+# 기본 임계값 (개선된 값들)
 text_threshold = 0.35
-image_threshold = 0.9
+image_threshold = 0.8
 combined_threshold = 0.15
 minimum_combined_score = 0.10
-image_display_threshold = 0.9
+image_display_threshold = 0.8
+# 새로운 해시 기반 매칭 설정
+enable_hash_matching = true
+hash_matching_priority = true
+hash_verification_threshold = 0.8
+
 # Naver API 특별 설정
 naver_initial_similarity_threshold = 0.20
 naver_minimum_similarity = 0.15
@@ -57,10 +67,12 @@ batch_size = 16
 skip_image_if_size_exceeds_mb = 10
 image_similarity_timeout_sec = 20
 
-# 캐시 설정
-max_cache_size = 2000
+# 캐시 설정 (개선됨)
+max_cache_size = 3000
 use_persistent_cache = true
-cache_expiry_days = 7
+cache_expiry_days = 14
+enable_feature_cache = true
+cache_compression = true
 
 # 카테고리별 임계값
 use_category_thresholds = true
@@ -74,7 +86,7 @@ download_image_timeout = 30
 max_concurrent_downloads = 5
 
 [ImageMatching]
-# 특징 매칭 파라미터
+# 특징 매칭 파라미터 (최적화됨)
 feature_match_threshold = 25
 sift_ratio_threshold = 0.80
 akaze_distance_threshold = 35
@@ -97,18 +109,21 @@ apply_clahe = true
 use_multiple_models = true
 use_background_removal_before_matching = true
 
-# 신뢰도 임계값 (0에서 1 사이)
-minimum_match_confidence = 0.9
+# 신뢰도 임계값 (개선된 값)
+minimum_match_confidence = 0.8
+high_confidence_threshold = 0.9
 
 [ImageFiltering]
-# 이미지 필터링 설정
+# 이미지 필터링 설정 (개선됨)
+similarity_threshold = 0.4
 # 네이버 이미지 관련 설정
-naver_similarity_threshold = 0.9
-skip_naver_validation = false
-lenient_naver_validation = false
-
+naver_similarity_threshold = 0.3
+skip_naver_validation = true
+lenient_naver_validation = true
 # 고려기프트 이미지 관련 설정
-kogift_similarity_threshold = 0.9
+kogift_similarity_threshold = 0.4
+# 해오름 이미지 관련 설정
+haereum_similarity_threshold = 0.5
 
 [CategoryThresholds]
 사무용품 = 0.45, 0.40
@@ -204,6 +219,14 @@ playwright_new_context_delay_ms = 2000
 playwright_browser_args = ["--disable-gpu", "--disable-dev-shm-usage", "--disable-extensions", "--no-sandbox", "--disable-setuid-sandbox", "--disable-web-security"]
 
 [Performance]
+# 새로운 성능 최적화 섹션
+enable_parallel_processing = true
+max_memory_usage_mb = 4096
+enable_memory_monitoring = true
+garbage_collection_interval = 100
+optimize_image_loading = true
+use_lazy_loading = true
+enable_early_exit = true
 profile_code = false
 memory_monitoring_interval_sec = 30
 optimize_for = speed
@@ -233,3 +256,12 @@ recipient_emails = jamesen1004@gmail.com, dasomas@hanmail.net, myungja27@naver.c
 # 이메일 내용 설정
 email_subject_prefix = ShopRPA 결과
 include_log_file = false
+
+[ErrorHandling]
+# 새로운 에러 처리 섹션
+max_retry_attempts = 3
+retry_delay_seconds = 2
+enable_graceful_degradation = true
+fallback_to_text_matching = true
+log_errors_to_file = true
+error_recovery_enabled = true
