Update image filtering configuration and processing logic to improve Naver image handling. Adjusted similarity thresholds for Naver and Haereum images, ensuring a minimum similarity score is enforced. Enhanced logging for better traceability of filtering decisions.

--- a/config.ini
+++ b/config.ini
@@ -114,16 +114,16 @@ minimum_match_confidence = 0.8
 high_confidence_threshold = 0.9
 
 [ImageFiltering]
-# 이미지 필터링 설정 (개선됨)
+# 이미지 필터링 설정 (네이버 이미지 문제 해결)
 similarity_threshold = 0.4
-# 네이버 이미지 관련 설정
-naver_similarity_threshold = 0.3
+# 네이버 이미지 관련 설정 (매우 관대하게 설정하여 필터링 방지)
+naver_similarity_threshold = 0.01
 skip_naver_validation = true
 lenient_naver_validation = true
 # 고려기프트 이미지 관련 설정
 kogift_similarity_threshold = 0.4
 # 해오름 이미지 관련 설정
-haereum_similarity_threshold = 0.5
+haereum_similarity_threshold = 0.3
 
 [CategoryThresholds]
 사무용품 = 0.45, 0.40
