--- a/config.ini
+++ b/config.ini
@@ -86,12 +86,13 @@ download_image_timeout = 30
 max_concurrent_downloads = 5
 
 [ImageMatching]
-# 특징 매칭 파라미터 (최적화됨)
-feature_match_threshold = 25
-sift_ratio_threshold = 0.80
-akaze_distance_threshold = 35
-min_match_count = 10
-inlier_threshold = 3.0
+# 특징 매칭 파라미터 (더 엄격한 임계값으로 조정)
+feature_match_threshold = 30
+sift_ratio_threshold = 0.75
+akaze_distance_threshold = 30
+min_match_count = 15
+inlier_threshold = 2.5
+combined_threshold = 0.4
 
 # 특징 추출 파라미터
 sift_features = 3500
@@ -114,16 +115,16 @@ minimum_match_confidence = 0.8
 high_confidence_threshold = 0.9
 
 [ImageFiltering]
-# 이미지 필터링 설정 (네이버 이미지 문제 해결)
-similarity_threshold = 0.4
-# 네이버 이미지 관련 설정 (매우 관대하게 설정하여 필터링 방지)
-naver_similarity_threshold = 0.01
-skip_naver_validation = true
-lenient_naver_validation = true
+# 이미지 필터링 설정 (정말 유사한 이미지만 통과하도록 조정)
+similarity_threshold = 0.6
+# 네이버 이미지 관련 설정 (실제 이미지 유사도 기반으로 필터링)
+naver_similarity_threshold = 0.6
+skip_naver_validation = false
+lenient_naver_validation = false
+enable_naver_image_similarity = true
 # 고려기프트 이미지 관련 설정
-kogift_similarity_threshold = 0.4
-# 해오름 이미지 관련 설정
-haereum_similarity_threshold = 0.3
+kogift_similarity_threshold = 0.5
+# 해오름 이미지는 무조건 유지됨 (임계값 필터링 없음)
 
 [CategoryThresholds]
 사무용품 = 0.45, 0.40
