--- a/config.ini
+++ b/config.ini
@@ -61,7 +61,7 @@ name_split_matching = true
 image_model_name = EfficientNetB0
 image_resize_dimension = 256
 image_preprocessing_quality = 95
-use_gpu = true
+use_gpu = false
 gpu_memory_fraction = 0.8
 batch_size = 16
 skip_image_if_size_exceeds_mb = 10
@@ -90,9 +90,9 @@ max_concurrent_downloads = 5
 feature_match_threshold = 30
 sift_ratio_threshold = 0.75
 akaze_distance_threshold = 30
-min_match_count = 15
-inlier_threshold = 2.5
-combined_threshold = 0.4
+min_match_count = 10
+inlier_threshold = 3.5
+combined_threshold = 0.05
 
 # 특징 추출 파라미터
 sift_features = 3500
@@ -116,14 +116,14 @@ high_confidence_threshold = 0.9
 
 [ImageFiltering]
 # 이미지 필터링 설정 (정말 유사한 이미지만 통과하도록 조정)
-similarity_threshold = 0.6
+similarity_threshold = 0.3
 # 네이버 이미지 관련 설정 (실제 이미지 유사도 기반으로 필터링)
-naver_similarity_threshold = 0.6
+naver_similarity_threshold = 0.3
 skip_naver_validation = false
-lenient_naver_validation = false
+lenient_naver_validation = true
 enable_naver_image_similarity = true
 # 고려기프트 이미지 관련 설정
-kogift_similarity_threshold = 0.5
+kogift_similarity_threshold = 0.25
 # 해오름 이미지는 무조건 유지됨 (임계값 필터링 없음)
 
 [CategoryThresholds]
