--- a/config.ini
+++ b/config.ini
@@ -24,23 +24,23 @@ naver_client_id = rMvGcaWRPL_ASs7x8YT1
 naver_client_secret = cdNOiv7q5t
 
 [Matching]
-# 기본 임계값 (개선된 값들)
-text_threshold = 0.35
-image_threshold = 0.8
-combined_threshold = 0.15
-minimum_combined_score = 0.10
-image_display_threshold = 0.8
-# 새로운 해시 기반 매칭 설정
+# 프로덕션 수준 임계값 - 매우 엄격한 기준
+text_threshold = 0.65
+image_threshold = 0.95
+combined_threshold = 0.25
+minimum_combined_score = 0.20
+image_display_threshold = 0.95
+# 해시 기반 매칭 설정 - 완벽 매칭 우선
 enable_hash_matching = true
 hash_matching_priority = true
-hash_verification_threshold = 0.8
+hash_verification_threshold = 0.95
 
-# Naver API 특별 설정
-naver_initial_similarity_threshold = 0.20
-naver_minimum_similarity = 0.15
+# Naver API 특별 설정 - 프로덕션 수준
+naver_initial_similarity_threshold = 0.70
+naver_minimum_similarity = 0.65
 
-# Kogift 텍스트 매칭 설정
-kogift_initial_similarity_threshold = 0.10
+# Kogift 텍스트 매칭 설정 - 엄격한 기준
+kogift_initial_similarity_threshold = 0.60
 
 # 가중치 설정
 text_weight = 0.70
@@ -86,13 +86,13 @@ download_image_timeout = 30
 max_concurrent_downloads = 5
 
 [ImageMatching]
-# 특징 매칭 파라미터 (더 엄격한 임계값으로 조정)
-feature_match_threshold = 30
-sift_ratio_threshold = 0.75
-akaze_distance_threshold = 30
-min_match_count = 10
-inlier_threshold = 3.5
-combined_threshold = 0.05
+# 특징 매칭 파라미터 - 프로덕션 수준의 매우 엄격한 임계값
+feature_match_threshold = 50
+sift_ratio_threshold = 0.60
+akaze_distance_threshold = 20
+min_match_count = 25
+inlier_threshold = 2.0
+combined_threshold = 0.02
 
 # 특징 추출 파라미터
 sift_features = 3500
@@ -110,39 +110,39 @@ apply_clahe = true
 use_multiple_models = true
 use_background_removal_before_matching = true
 
-# 신뢰도 임계값 (개선된 값)
-minimum_match_confidence = 0.8
-high_confidence_threshold = 0.9
+# 신뢰도 임계값 - 프로덕션급 엄격한 기준
+minimum_match_confidence = 0.85
+high_confidence_threshold = 0.95
 
 [ImageFiltering]
-# 이미지 필터링 설정 (정말 유사한 이미지만 통과하도록 조정)
-similarity_threshold = 0.3
-# 네이버 이미지 관련 설정 (실제 이미지 유사도 기반으로 필터링)
-naver_similarity_threshold = 0.3
+# 프로덕션 수준 이미지 필터링 설정 - 완벽에 가까운 매칭만 허용
+similarity_threshold = 0.75
+# 네이버 이미지 관련 설정 - 고품질 이미지만 허용
+naver_similarity_threshold = 0.70
 skip_naver_validation = false
-lenient_naver_validation = true
+lenient_naver_validation = false
 enable_naver_image_similarity = true
-# 고려기프트 이미지 관련 설정
-kogift_similarity_threshold = 0.25
+# 고려기프트 이미지 관련 설정 - 매우 엄격한 기준
+kogift_similarity_threshold = 0.65
 # 해오름 이미지는 무조건 유지됨 (임계값 필터링 없음)
 
 [CategoryThresholds]
-사무용품 = 0.45, 0.40
-생활용품 = 0.40, 0.38
-건강식품 = 0.45, 0.35
-식품 = 0.40, 0.35
-전자기기 = 0.50, 0.45
-주방용품 = 0.40, 0.38
-인테리어 = 0.45, 0.40
-의류 = 0.50, 0.45
-화장품 = 0.50, 0.45
-스포츠용품 = 0.45, 0.40
+사무용품 = 0.75, 0.70
+생활용품 = 0.70, 0.68
+건강식품 = 0.75, 0.65
+식품 = 0.70, 0.65
+전자기기 = 0.80, 0.75
+주방용품 = 0.70, 0.68
+인테리어 = 0.75, 0.70
+의류 = 0.80, 0.75
+화장품 = 0.80, 0.75
+스포츠용품 = 0.75, 0.70
 
 [MatchQualityThresholds]
-high_quality = 0.9
-medium_quality = 0.35
-low_quality = 0.20
-reject_threshold = 0.20
+high_quality = 0.95
+medium_quality = 0.70
+low_quality = 0.50
+reject_threshold = 0.50
 
 [Concurrency]
 max_crawl_workers = 2
